// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/pipenv/artifacts handles no constraint 1`] = `
[
  {
    "cmd": "pipenv lock",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/pipenv/artifacts returns null if unchanged 1`] = `
[
  {
    "cmd": "pipenv lock",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/pipenv/artifacts returns updated Pipenv.lock when doing lockfile maintenance 1`] = `
[
  {
    "cmd": "pipenv lock",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/pipenv/artifacts returns updated Pipfile.lock 1`] = `
[
  {
    "cmd": "pipenv lock",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/pipenv/artifacts supports docker mode 1`] = `
[
  {
    "cmd": "docker pull renovate/sidecar",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker ps --filter name=renovate_sidecar -aq",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker run --rm --name=renovate_sidecar --label=renovate_child -v "/tmp/github/some/repo":"/tmp/github/some/repo" -v "/tmp/renovate/cache":"/tmp/renovate/cache" -e PIPENV_CACHE_DIR -e PIP_CACHE_DIR -e BUILDPACK_CACHE_DIR -w "/tmp/github/some/repo" renovate/sidecar bash -l -c "install-tool python 3.7.6 && pip install --user pipenv && pipenv lock"",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "BUILDPACK_CACHE_DIR": "/tmp/renovate/cache/containerbase",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
        "PIP_CACHE_DIR": "/tmp/renovate/cache/others/pip",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/pipenv/artifacts uses pipenv version from Pipfile 1`] = `
[
  {
    "cmd": "docker pull renovate/sidecar",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker ps --filter name=renovate_sidecar -aq",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker run --rm --name=renovate_sidecar --label=renovate_child -v "/tmp/github/some/repo":"/tmp/github/some/repo" -v "/tmp/renovate/cache":"/tmp/renovate/cache" -e PIPENV_CACHE_DIR -e BUILDPACK_CACHE_DIR -w "/tmp/github/some/repo" renovate/sidecar bash -l -c "install-tool python 3.10.2 && pip install --user pipenv==2020.8.13 && pipenv lock"",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "BUILDPACK_CACHE_DIR": "/tmp/renovate/cache/containerbase",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/pipenv/artifacts uses pipenv version from Pipfile dev packages 1`] = `
[
  {
    "cmd": "docker pull renovate/sidecar",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker ps --filter name=renovate_sidecar -aq",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker run --rm --name=renovate_sidecar --label=renovate_child -v "/tmp/github/some/repo":"/tmp/github/some/repo" -v "/tmp/renovate/cache":"/tmp/renovate/cache" -e PIPENV_CACHE_DIR -e BUILDPACK_CACHE_DIR -w "/tmp/github/some/repo" renovate/sidecar bash -l -c "install-tool python 3.10.2 && pip install --user pipenv==2020.8.13 && pipenv lock"",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "BUILDPACK_CACHE_DIR": "/tmp/renovate/cache/containerbase",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/pipenv/artifacts uses pipenv version from config 1`] = `
[
  {
    "cmd": "docker pull renovate/sidecar",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker ps --filter name=renovate_sidecar -aq",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker run --rm --name=renovate_sidecar --label=renovate_child -v "/tmp/github/some/repo":"/tmp/github/some/repo" -v "/tmp/renovate/cache":"/tmp/renovate/cache" -e PIPENV_CACHE_DIR -e BUILDPACK_CACHE_DIR -w "/tmp/github/some/repo" renovate/sidecar bash -l -c "install-tool python 3.10.2 && pip install --user pipenv==2020.1.1 && pipenv lock"",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "BUILDPACK_CACHE_DIR": "/tmp/renovate/cache/containerbase",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "PIPENV_CACHE_DIR": "/tmp/renovate/cache/others/pipenv",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
